--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -13,7 +13,7 @@
 
   <div class="rpg-card">
     <h1><i class="fa-solid fa-dragon"></i> MyLittleRPG</h1>
-    <form method="post" id="loginForm" action="/login">
+    <form method="post" id="loginForm">
       <div class="mb-4">
         <label for="email" class="form-label">Email</label>
         <input type="email" id="email" name="email" class="form-control" required/>
@@ -25,7 +25,7 @@
       <button type="submit" class="btn btn-warning d-block mx-auto"><i class="fa-solid fa-lock-open"></i> Se connecter</button>
     </form>
   </div>
-
+<script src="../js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
