notifications, logout, and character info UI

--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -10,7 +10,7 @@
 <link href="../css/login.css" rel="stylesheet" />
 </head>
 <body>
-
+  <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
   <div class="rpg-card">
     <h1><i class="fa-solid fa-dragon"></i> MyLittleRPG</h1>
     <form method="post" id="loginForm">
@@ -24,6 +24,7 @@
       </div>
       <button type="submit" class="btn btn-warning d-block mx-auto"><i class="fa-solid fa-lock-open"></i> Se connecter</button>
     </form>
+    <p class="mt-4 text-center">Pas encore de compte ? <a href="register.html">Inscrivez-vous</a></p>
   </div>
 <script src="../js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
