--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
 </head>
 <body>
-
+  <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
   <div class="rpg-card">
     <h1><i class="fa-solid fa-user-plus"></i> Inscription</h1>
     <form method="post" id="registerForm">
@@ -28,6 +28,7 @@
       </div>
       <button type="submit" class="btn btn-warning d-block mx-auto"><i class="fa-solid fa-check"></i> S'inscrire</button>
     </form>
+    <p class="mt-4 text-center">Déjà un compte ? <a href="login.html">Connectez-vous</a></p>
   </div>
   <script src="../js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
