--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -33,14 +33,25 @@ body{
     border-radius: 6px;
   }
 
+  .monstre-sprite {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 75%;
+    height: 75%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    display: none;
+  }
+
   .tile-button {
-  border: none;
-  background: transparent;
-  padding: 0;
-  cursor: pointer;
-  display: inline-block;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
+    border: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    display: inline-block;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
 
 .tile-button img {
   display: block;
@@ -48,8 +59,7 @@ body{
   transition: transform 0.2s ease;
 }
 
-/* Effet zoom au survol */
-.tile-button:hover img {
+.tile-button:hover .grid-tile {
   transform: scale(1.15);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
