--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -8,6 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <link href="../css/login.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/2619/2619285.png">
 </head>
 <body>
   <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
