Traduction du côté web français

--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -14,14 +14,14 @@
     <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
     <div class="rpg-card">
       <h1><i class="fa-solid fa-dragon"></i> MyLittleRPG</h1>
-      <form method="post" id="loginForm">
+      <form method="post" id="formulaireConnexion">
         <div class="mb-4">
           <label for="email" class="form-label">Email</label>
           <input type="email" id="email" name="email" class="form-control" required/>
         </div>
         <div class="mb-5">
           <label for="password" class="form-label">Mot de passe</label>
-          <input type="password" id="password" name="password" class="form-control" required/>
+          <input type="password" id="mdp" name="mdp" class="form-control" required/>
         </div>
         <button type="submit" class="btn btn-warning d-block mx-auto"><i class="fa-solid fa-lock-open"></i> Se connecter</button>
       </form>
