--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -14,18 +14,18 @@
   <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
   <div class="rpg-card">
     <h1><i class="fa-solid fa-user-plus"></i> Inscription</h1>
-    <form method="post" id="registerForm">
+    <form method="post" id="formulaireInscription">
       <div class="mb-4">
         <label for="email" class="form-label">Email</label>
         <input type="email" id="email" name="email" class="form-control" required autocomplete="email" />
       </div>
       <div class="mb-4">
         <label for="username" class="form-label">Nom d'utilisateur</label>
-        <input type="text" id="username" name="username" class="form-control" required autocomplete="username" />
+        <input type="text" id="nomUtilisateur" name="nomUtilisateur" class="form-control" required autocomplete="username" />
       </div>
       <div class="mb-5">
         <label for="password" class="form-label">Mot de passe</label>
-        <input type="password" id="password" name="password" class="form-control" required autocomplete="new-password" />
+        <input type="password" id="mdp" name="mdp" class="form-control" required autocomplete="new-password" />
       </div>
       <button type="submit" class="btn btn-warning d-block mx-auto"><i class="fa-solid fa-check"></i> S'inscrire</button>
     </form>
